--- a/dark.css
+++ b/dark.css
@@ -1,4 +1,4 @@
-.header-main {
+.header-main, .helper__infos--list, .helper__textarea-new, .helper__textarea-new::placeholder, .configomatic__product-list, .configomatic__product-list .configomatic__product-list--search .configomatic__search-filter, .configomatic__product-sheet {
     background-color: #202020;
     color: #bdbdbd;
 }
@@ -7,28 +7,20 @@
     border: 2px solid #202020;
 }
 
-.header-main__searchinput, .header-main__searchinput::placeholder {
-    color: #bdbdbd;
-}
-
 .notifications__list {
     background-color: #303030;
     border-radius: 0px;
 }
 
-.notification__item:hover {
+.notification__item:hover, .helper__question--avatar, .helper__conversation-content {
     background-color: #404040;
 }
 
-.notifications__list span {
-    color: #bdbdbd;
-}
-
-.notifications__see-all, .gamer-preview__stats {
+.notifications__see-all, .gamer-preview__stats, .product-filters__content .vue-slider-component .vue-slider-dot .vue-slider-dot-handle:before, .product-filters__content .vue-slider-component .vue-slider-process, .product-filters__content .vue-slider-component .vue-slider-dot .vue-slider-dot-handle:after, .configomatic__item--anicos .configomatic__item--anico.OPS, .configomatic__product-list .configomatic__best-seller .configomatic__best-seller--header .configomatic__best-seller--title, .configomatic__filters .vue-slider-component .vue-slider-process, .configomatic__table .configomatic__table--row.isCurrent:not(.configomatic__table--header), .multiselect__tag {
     background-color: #2979FF;
 }
 
-.notification__item:not(:last-child):after {
+.notification__item:not(:last-child):after, .modal-header__close:after {
     content: none;
 }
 
@@ -36,42 +28,19 @@
     border-bottom: 6px solid #303030;
 }
 
-
-
-
-
-.navigation-main {
+.navigation-main, .product-list__best-sellers .product-list__best-sellers--wrapper, .products .products__item, .product-sheet__navigation, .product-sheet__infos-bloc .product-sheet__infos-bloc--slider .product-sheet__infos-bloc--slider-photos, .product__card, .navigation-main__split-container, .white-container, .publication-full__comments, .publication-full-page, .publication-full, .helper__navigation, .configomatic__section, .configomatic__header .configomatic__header--content .logo {
     background-color: #303030;
 }
 
-.navigation-main li a {
-    color: #bdbdbd;
-}
-
-.navigation-main__catalog-link a.current, .navigation-main__catalog-link a:hover, a, .publication-header__share-by {
+.navigation-main__catalog-link a.current, .navigation-main__catalog-link a:hover, a, .publication-header__share-by, .category-menu-opened ul li a:hover, .category-menu ul li a:hover, .configomatic__content--left .configomatic__combo--wrapper .configomatic__combo--toggle, .configomatic__content--left .configomatic__combo--wrapper .configomatic__combo--add, .configomatic__content--left .configomatic__combo--wrapper .configomatic__combo--remove {
     color: #2979FF;
 }
 
-.navigation-main__split-container {
-    background-color: #303030;
-}
-
-
-
-
-.page-wrapper, .publication-card__dropdown-content--open {
-    background-color: #202020;
-}
-
-.homepage__links ul a, h3, .publication-card__header-pseudo, .product .product__label, .publication-card__text, .homepage__publish-text, .homepage__publish-more-text, .publication-header__time-link, .header-main__griditem--configo a, .header-main__griditem--notifications a, .helper__navigation-link.active, .helper__navigation-link:hover {
+.homepage__links ul a, h3, .publication-card__header-pseudo, .product .product__label, .publication-card__text, .homepage__publish-text, .homepage__publish-more-text, .publication-header__time-link, .header-main__griditem--configo a, .header-main__griditem--notifications a, .helper__navigation-link.active, .helper__navigation-link:hover, .navigation-main li a, .header-main__searchinput, .header-main__searchinput::placeholder, .notifications__list span, .helper__header-text, .helper__navigation-items li a, .gamer-dashboard .gamer-dashboard__gamer--social ul li span, .category-container .category-container__category-label, .category-container .range-container__range-label, .range-container .category-container__category-label, .range-container .range-container__range-label, .category-menu-opened ul li, .category-menu-opened ul li a, .category-menu ul li a, .product-list__best-sellers .product-list__best-sellers--products .product-list__best-sellers--bestseller .product-list__best-sellers--price, .product-list__best-sellers .product-list__best-sellers--products .product-list__best-sellers--bestseller img, .product-list__best-sellers .product-list__best-sellers--products .product-list__best-sellers--bestseller strong, .products .products__item .products__item--label, .products .products__item .products__item--sublabel, .product__vfl .count-down span, .product-list__header .product-list__header--content > h1, .product-sheet__infos-bloc .product-sheet__infos--title, .product-sheet__navigation--item, .product__card .product__card--info .product__card--label, span.product__card--sublabel, .multiselect, .helper__question-author, .helper__question-text, .helper__chat-bubble-container--me .helper__chat-time, .helper__chat-bubble-container--other .helper__chat-time, .helper__question-time, .product-sheet__technical .caracDesc, .swal-text, .swal-title:not(:last-child) {
     color: #bdbdbd;
 }
 
-.white-container, .publication-full__comments, .publication-full-page, .publication-full {
-    background-color: #303030;
-}
-
-.gamer-card {
+.gamer-card, .configomatic__results.configomatic__results--assembly .configomatic__assembly--option:hover {
     background-color: #303030 !important;
 }
 
@@ -79,9 +48,9 @@
     color: #bdbdbd !important;
 }
 
-.publication-card__tag, .homepage__filters .homepage__filters-links:after {
+.publication-card__tag, .homepage__filters .homepage__filters-links:after, .button--blue, .button--blue:visited, .button--blue:hover, .button--blue:visited:hover {
     background-color: #2979FF;
-    color: #bdbdbd;
+    color: #cccccc;
 }
 
 .publication-card__footer-comment--dark, .publication-card__footer-comment:hover, .publication-header__time-link:hover {
@@ -100,12 +69,12 @@
     background-color: #74a8ff;
 }
 
-a.product.publication-card__product, .publication-full__input {
+a.product.publication-card__product, .publication-full__input, .helper__conversation-question, .helper__conversation-dropdown-content {
     background-color: #202020;
     border: none;
 }
 
-.publication-card__medias {
+.publication-card__medias, .multiselect__content-wrapper, .multiselect__tags {
     background-color: #303030;
     border: none;
 }
@@ -119,26 +88,9 @@ a.product.publication-card__product, .publication-full__input {
     padding: 20px;
 }
 
-
-
-
-
-.report[data-v-a4b1b3ae] {
-    background-color: #202020;
-}
-
-.infos-message, .gamer-dashboard .gamer-dashboard__profile, .gamer-dashboard .gamer-dashboard__content {
+.topForm__input, .topForm__select, .topForm__textarea, .modal-header__close, .modal-header .modal-header__title, .modal-header .modal-header__icon:before, .infos-message, .gamer-dashboard .gamer-dashboard__profile, .gamer-dashboard .gamer-dashboard__content, .products .products__header .products__notices, .products .products__header .products__sort, .product-filters__filter, .page .page__breadcrumb a, .button--green-outline, .helper__infos, .configomatic__product-sheet .configomatic__product-sheet--content .product-sheet__technical .caracLine, .multiselect__option--highlight, .configomatic__preview .configomatic__preview--panel, .configomatic__section, .configomatic__table .configomatic__table--row.isEven>.configomatic__table--item {
     background-color: #303030;
     color: #bdbdbd;
-}
-
-.topForm__input, .topForm__select, .topForm__textarea, .modal-header__close, .modal-header .modal-header__title, .modal-header .modal-header__icon:before {
-    background-color: #303030;
-    color: #bdbdbd;
-}
-
-.modal-header__close:after {
-    content: none;
 }
 
 .gamer-preview__details {
@@ -146,16 +98,8 @@ a.product.publication-card__product, .publication-full__input {
     border: 1px solid #202020;
 }
 
-.helper__close-btn, .helper__header-icon, .helper__header-text {
+.helper__close-btn, .helper__header-icon, .helper__header-text, .configomatic__content--left .configomatic__combos .configomatic__combo.hasProduct, .product-sheet__technical .caracLine, .page-wrapper, .publication-card__dropdown-content--open, .report[data-v-a4b1b3ae], .configomatic__filters .configomatic__filters--group .multiselect .multiselect__single, .multiselect__option--highlight:hover, .swal-modal, .configomatic__content--left .configomatic__combo--wrapper .configomatic__combo--action, .configomatic__content--left .configomatic__combo--wrapper .configomatic__combo--add:hover, .configomatic__content--left .configomatic__combo--wrapper .configomatic__combo--remove:hover {
     background-color: #202020;
-}
-
-.helper__navigation {
-    background-color: #303030;
-}
-
-.helper__header-text, .helper__navigation-items li a {
-    color: #bdbdbd;
 }
 
 .helper__content {
@@ -164,36 +108,10 @@ a.product.publication-card__product, .publication-full__input {
     background-color: #252525;
 }
 
-.helper__infos--list, .helper__textarea-new, .helper__textarea-new::placeholder {
-    background-color: #202020;
-    color: #bdbdbd;
-}
-
-.gamer-dashboard .gamer-dashboard__gamer--social ul li span {
-    color: #bdbdbd;
-}
-
 .publication-card__more-products {
     background-color: #202020;
     color: #bdbdbd;
     border: none;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.configomatic__section {
-    background-color: #303030;
 }
 
 .configomatic__content--left .configomatic__combos .configomatic__combo {
@@ -202,118 +120,29 @@ a.product.publication-card__product, .publication-full__input {
     border-radius: 0px;
 }
 
-.configomatic__preview .configomatic__preview--panel, .configomatic__section {
-    color: #bdbdbd;
-    background-color: #303030;
-}
-
 .configomatic__content--left .configomatic__combo--wrapper .configomatic__combo--toggle, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--CB0 .CB0, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--CB0 .KEY, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--KEY .CB0, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--KEY .KEY, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--CB5 .CB5, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--CB5 .MOU, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--MOU .CB5, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--MOU .MOU, .configomatic__content--left .configomatic__combos .configomatic__combo-promo .configomatic__promo, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--CBB .CBB, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--CBB .KMO, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--KMO .CBB, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--KMO .KMO, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--CB1 .CB1, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--CB1 .CB2, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--CB1 .CB3, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--CB2 .CB1, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--CB2 .CB2, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--CB2 .CB3, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--CB3 .CB1, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--CB3 .CB2, .configomatic__content--left .configomatic__combo--wrapper.configomatic__combo-content--CB3 .CB3 {
     border: 0px;
     border-radius: 0px;
-}
-
-.configomatic__content--left .configomatic__combo--wrapper .configomatic__combo--toggle {
-    color: #2979FF;
-}
-
-.button--blue, .button--blue:visited, .button--blue:hover, .button--blue:visited:hover {
-    background-color: #2979FF;
-    color: #bdbdbd;
-}
-
-.configomatic__promo {
-    display: none;
 }
 
 .configomatic__header .configomatic__header--content .logo:after {
     background: none;
 }
 
-.configomatic__header .configomatic__header--content .logo {
-    background-color: #303030;
-}
-
-.configomatic__product-list, .configomatic__product-list .configomatic__product-list--search .configomatic__search-filter {
-    background-color: #202020;
-    color: #bdbdbd;
-}
-
 .configomatic__table .configomatic__table--row {
     grid-column-gap: 0px;
-}
-
-.configomatic__table .configomatic__table--row.isEven>.configomatic__table--item {
-    background-color: #303030;
-    color: #bdbdbd;
-}
-
-.configomatic__item--anicos .configomatic__item--anico.OPS, .configomatic__product-list .configomatic__best-seller .configomatic__best-seller--header .configomatic__best-seller--title, .configomatic__filters .vue-slider-component .vue-slider-process {
-    background-color: #2979FF;
 }
 
 .configomatic__product-list .configomatic__product-list--search .configomatic__search-filter {
     border-bottom: 3px solid #2979FF;
 }
 
-.configomatic__content--left .configomatic__combos .configomatic__combo.hasProduct {
-    background-color: #202020;
-}
-
-.configomatic__table .configomatic__table--row.isCurrent:not(.configomatic__table--header) {
-    background-color: #2979FF;
-}
-
 .configomatic__table .configomatic__table--row:hover:not(.configomatic__table--header) {
     background-color: #151515;
 }
 
-.configomatic__product-sheet {
-    background-color: #202020;
-    color: #bdbdbd;
-}
-
-.configomatic__product-sheet .configomatic__product-sheet--content .product-sheet__technical .caracLine {
-    background-color: #303030;
-    color: #bdbdbd;
-}
-
-.product-sheet__technical .caracDesc {
-    color: #bdbdbd;
-}
-
-.multiselect, .helper__question-author, .helper__question-text, .helper__chat-bubble-container--me .helper__chat-time, .helper__chat-bubble-container--other .helper__chat-time, .helper__question-time {
-    color: #bdbdbd;
-}
-
-.multiselect__option--highlight {
-    background-color: #303030;
-    color: #bdbdbd;
-}
-
-.multiselect__option--highlight:hover {
-    background-color: #202020;
-}
-
-.multiselect__content-wrapper {
-    background-color: #303030;
-    border: none;
-}
-
-.multiselect__tags {
-    border: none;
-    background-color: #303030;
-}
-
-.configomatic__filters .configomatic__filters--group .multiselect .multiselect__single {
-    background-color: #202020;
-}
-
 .multiselect__option--selected {
     background: #202020;
-}
-
-.multiselect__tag {
-    background-color: #2979FF;
 }
 
 .multiselect__option--highlight:after {
@@ -321,24 +150,11 @@ a.product.publication-card__product, .publication-full__input {
     background: #2979FF !important;
 }
 
-
-
-
-
-
-
 .textautocompleter__textarea, .textautocompleter__search-input, .textautocompleter__bloc .icon {
     border: none;
     background-color: #202020;
-    border-radius: none;
+    border-radius: 0px;
     color: #bdbdbd;
-}
-
-
-
-
-.helper__question--avatar {
-    background-color: #404040;
 }
 
 .helper__conversation-textarea, .helper__question-textarea {
@@ -346,23 +162,9 @@ a.product.publication-card__product, .publication-full__input {
     color: #bdbdbd;
 }
 
-.helper__conversation-content {
-    background-color: #404040; 
-}
-
 .helper__chat-bubble-container--me .helper__chat-bubble {
     color: #eee;
     background-color: #252525;
-}
-
-.helper__conversation-question, .helper__conversation-dropdown-content {
-    background-color: #202020;
-    border: none;
-}
-
-.button--green-outline, .helper__infos {
-    background-color: #303030;
-    color: #bdbdbd;
 }
 
 .publication-full .all-comments__list .publication-card {
@@ -377,41 +179,8 @@ a.product.publication-card__product, .publication-full__input {
     border-top: 3px solid #2979FF;
 }
 
-.category-container .category-container__category-label, .category-container .range-container__range-label, .range-container .category-container__category-label, .range-container .range-container__range-label, .category-menu-opened ul li, .category-menu-opened ul li a, .category-menu ul li a, .product-list__best-sellers .product-list__best-sellers--products .product-list__best-sellers--bestseller .product-list__best-sellers--price, .product-list__best-sellers .product-list__best-sellers--products .product-list__best-sellers--bestseller img, .product-list__best-sellers .product-list__best-sellers--products .product-list__best-sellers--bestseller strong {
-    color: #bdbdbd;
-}
-
-.category-menu-opened ul li a:hover, .category-menu ul li a:hover {
-    color: #2979FF;
-}
-
-.product-list__best-sellers .product-list__best-sellers--wrapper {
-    background-color: #303030;
-}
-
-.product-list__best-sellers .product-list__best-sellers--products .product-list__best-sellers--bestseller .product-list__best-sellers--price {
-    color: red;
-}
-
-.products .products__header .products__notices, .products .products__header .products__sort, .product-filters__filter, .page .page__breadcrumb a {
-    background-color: #303030;
-    color: #bdbdbd;
-}
-
-.products .products__item {
-    background-color: #303030;
-}
-
-.products .products__item .products__item--label, .products .products__item .products__item--sublabel, .product__vfl .count-down span, .product-list__header .product-list__header--content > h1, .product-sheet__infos-bloc .product-sheet__infos--title, .product-sheet__navigation--item, .product__card .product__card--info .product__card--label, span.product__card--sublabel {
-    color: #bdbdbd;
-}
-
-.product-filters__content .vue-slider-component .vue-slider-dot .vue-slider-dot-handle:before, .product-filters__content .vue-slider-component .vue-slider-process, .product-filters__content .vue-slider-component .vue-slider-dot .vue-slider-dot-handle:after {
-    background-color: #2979FF;
-}
-
-.product-sheet__navigation, .product-sheet__infos-bloc .product-sheet__infos-bloc--slider .product-sheet__infos-bloc--slider-photos, .product__card {
-    background-color: #303030;
+.product-list__best-sellers {
+    color: red !important;
 }
 
 .product-sheet__technical .caracLine:not(:last-child) {
@@ -420,14 +189,18 @@ a.product.publication-card__product, .publication-full__input {
     padding: 20px;
 }
 
-.product-sheet__technical .caracLine {
-    background-color: #202020;
-}
-
 .product_sheet__header {
     margin: 10px;
 }
 
-.page .page__breadcrumb--product {
+.page .page__breadcrumb--product, .configomatic__promo {
     display: none;
+}
+
+.product-list__best-sellers--products .product-list__best-sellers--bestseller .product-list__best-sellers--price, .configomatic__table--item.configomatic__item--prix {
+    color: #cd5c5c !important;
+}
+
+.configomatic__content--left .configomatic__combo--wrapper .configomatic__combo--add:before, .configomatic__content--left .configomatic__combo--wrapper .configomatic__combo--remove:before {
+    border: 0px;
 }
